Fix widget width on mobile

--- a/assets/styles/plugins/woocommerce/_woocommerce-small-screen.scss
+++ b/assets/styles/plugins/woocommerce/_woocommerce-small-screen.scss
@@ -44,6 +44,10 @@
     			width: auto;
     		}
     	}
+
+    	&.widget {
+			width: 100%; // Fix responsive width.
+		}
     }
 
 	@include mq($until: phone) {
